# 3drenderer

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: display.c  display.h  main.c  vector.c  vector.h
